<resources>
    <string name="app_name">Pembekalan Android</string>
    <string name="title_Quiz">Quiz 2</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Signup</string>
    <string name="title_API">API</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_quiz2">Activity_Quiz2</string>
    <string name="title_activity_signup">signupActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>