<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Quiz"
        android:title="@string/title_Quiz" />

    <item
        android:id="@+id/navigation_login"
        android:title="@string/title_login" />

    <item
        android:id="@+id/navigation_signup"
        android:title="@string/title_signup" />
    <item
        android:id="@+id/navigation_API"
        android:title="@string/title_API" /><item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/><item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"/><item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"/>

</menu>